# flaskv2

./: bootstrap_env.py  main.py  notes.md  pyproject.toml
flaskv2/: __init__.py  config.py  extensions.py  logging.json  logging_setup.py  models.py
flaskv2/blueprints/api/: __init__.py
flaskv2/blueprints/api/v1/: __init__.py
flaskv2/blueprints/web/: __init__.py
flaskv2/blueprints/web/admin/: __init__.py  forms.py  routes.py
flaskv2/blueprints/web/home/: __init__.py  routes.py
flaskv2/blueprints/web/user/: __init__.py  forms.py  routes.py
flaskv2/errors/: handlers.py
flaskv2/errortest/: routes.py
flaskv2/main/: routes.py
flaskv2/ps1_scripts/: fetch_jobs.ps1
flaskv2/services/: admin_service.py
flaskv2/static/css/: styles.css
flaskv2/static/css/extras/: error.css  lars2aws-tab-styles.css
flaskv2/static/js/: lars2aws.js
flaskv2/static/js/aws/: s3_builds.js
flaskv2/templates/: dashboard.html  footer.html  forgot_password.html  lars2aws.html  login.html  other.html  register.html  reset_password.html  start.html  tables.html  userlist.html
flaskv2/templates/aws/: instances.html  s3_builds.html
flaskv2/templates/base/: base.html
flaskv2/templates/base/auth/: auth-base.html
flaskv2/templates/bastion/: task_scheduler_jobs.html
flaskv2/templates/errors/: 403.html  404.html  405.html  500.html  error-base.html
flaskv2/templates/includes/: flash_messages.html
flaskv2/users/: routes - old users.py  routes.py
flaskv2/utils/: contants.py  db.py  helpers.py  page_dict.py  ssm.py  timing.py
templates/: base.html
(+8 files in other folders)
